--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "style-loader": "^1.2.1",
+    "webpack": "^4.44.1",
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
