--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "redux-thunk": "^2.3.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
