--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-dev-server": "^3.11.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "html-webpack-plugin": "^4.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
